# Loon

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
runtime/: Cargo.toml
runtime/src/: lib.rs  main.rs  models.json
runtime/src/api/: health.rs  mod.rs  models.rs  state.rs  transcriptions.rs
runtime/src/backends/: backend.rs  mod.rs  whisper_cpp.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_path.rs  audio.rs  cancel.rs  clipboard.rs  config.rs  db.rs  lib.rs  main.rs  ollama.rs  proxy.rs  recorder.rs  recording.rs  shortcut.rs
src/components/: header.tsx
src/pages/: homepage.tsx  launcher.tsx  setting.tsx  settings.tsx
